--- a/.github/workflows/build-openwrt_for_xiaomi_AX3000T_AN8855.yml
+++ b/.github/workflows/build-openwrt_for_xiaomi_AX3000T_AN8855.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt
+name: xiaomi AX3000T-AN8855 Build OpenWrt
 
 on:
   repository_dispatch:
